# edPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  build.py  edPush.cpp  edPush.h  generalIk.py  generator.py  lib.cpp  macro.h  meshAnalysis.cpp  meshAnalysis.h  pluginMain.cpp  testDeformer.cpp  testDeformer.h  testNode.h
adventofcode/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  inputs.py
adventofcode/a2019/: day1.py  day10.py  day3.py  day5.py
adventofcode/a2020/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  inputs.py
generalik/: testscript.py
lib/python/: nodeio.py  ops.py
lineOfAction/: context.py
rmfPci/: rmfPci.py
scenes/: memoryTest_v004.ma  tectonic_cube_test_v001.ma
src/: cameraShader.cpp  cameraShader.h  curveFrame.cpp  curveFrame.h  directDeltaMush.cpp  directDeltaMush.h  edBlendShape.cpp  edBlendShape.h  edPush.cpp  edPush.h  lib.cpp  memorySink.cpp  memorySink.h  memorySource.cpp  memorySource.h  meshAnalysis.cpp  meshAnalysis.h  meshToBuffers.cpp  meshToBuffers.h  multiMod.h  plugin.cpp  pluginMain.cpp  refDDM.cpp  refDDM.h  skyShader.cpp  skyShader.h  tectonicConstraintNode.cpp  tectonicConstraintNode.h  tectonicNode.cpp  tectonicNode.h  tree.h  uberDeformer.cpp  uberDeformer.h
src/deformer/: arapNotion.h  deformerData.h  deformerNotion.cpp  deformerNotion.h  skinNotion.cpp  skinNotion.h  smoothNotion.cpp  smoothNotion.h  wrapNotion.cpp  wrapNotion.h
src/lib/: api.cpp  api.h  containers.cpp  containers.h  edMaths.h  eigen.h  macro.h  mayaTopo.cpp  mayaTopo.h  shader.h  spacePartitioning.h  stdlib.h  topo.cpp  topo.h
src/shaders/: baseShader.cpp  bufferOps.h  starShaderVertex.glsl
src/tectonic/: constraint.h  notes.txt  solver.h  tecTypes.h  tectonicMaya.h
tectonic/: tectonic.py
templates/: generator.py  nodecpp.py  nodeh.py
test/: __init__.py  batch.py  generalik.py  lib.py  main.py  memory.py  meshanalysis.py  pySkyShader.py  setup.py  standalone.py  test_meshToBuffers.py  test_tectonic.py
tests/: generalik.py  meshanalysis.py
